--- a/apps/template/project.json
+++ b/apps/template/project.json
@@ -37,9 +37,9 @@
           "optimization": true,
           "outputHashing": "all",
           "sourceMap": false,
-          "namedChunks": false,
+          "namedChunks": true,
           "extractLicenses": true,
-          "vendorChunk": false
+          "vendorChunk": true
         }
       }
     },
