--- a/package.json
+++ b/package.json
@@ -51,15 +51,17 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@nrwl/cli": "14.6.4",
-    "@nrwl/cypress": "14.6.4",
-    "@nrwl/eslint-plugin-nx": "14.6.4",
-    "@nrwl/jest": "14.6.4",
-    "@nrwl/linter": "14.6.4",
+    "@nrwl/cli": "15.4.5",
+    "@nrwl/cypress": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/jest": "15.4.5",
+    "@nrwl/linter": "15.4.5",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "14.6.4",
-    "@nrwl/web": "14.6.4",
-    "@nrwl/workspace": "14.6.4",
+    "@nrwl/react": "15.4.5",
+    "@nrwl/web": "15.4.5",
+    "@nrwl/workspace": "15.4.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@svgr/webpack": "^6.5.1",
     "@testing-library/react": "13.3.0",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "28.1.1",
@@ -80,14 +82,14 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
-    "nx": "14.6.4",
+    "nx": "15.4.5",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.7.2"
   },
-  "browserslist":[
+  "browserslist": [
     ">0.2%",
     "not dead",
     "not op_mini all"
